--- a/captionMaker.html
+++ b/captionMaker.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div>
           <label>Text color</label>
-          <input id="colorText" type="color" value="#ffff00">
+          <input id="colorText" type="color" value="#f4b225">
         </div>
         <div>
           <label>Opacity (0=solid, 255=transparent)</label>
