--- a/captionMaker.html
+++ b/captionMaker.html
@@ -53,14 +53,14 @@
         </div>
         <div>
           <label>Font size</label>
-          <input id="fontSize" type="number" value="80" min="8">
+          <input id="fontSize" type="number" value="90" min="8">
         </div>
       </div>
 
       <div class="row">
         <div>
           <label>Text color</label>
-          <input id="colorText" type="color" value="#f4b225">
+          <input id="colorText" type="color" value="#bcf425">
         </div>
         <div>
           <label>Opacity (0=solid, 255=transparent)</label>
